--- a/detail.html
+++ b/detail.html
@@ -176,18 +176,28 @@
                 <div id="grid-container">
                     <section>
                         <img src="images/ophaal-tas.png" alt="">
-                        <h4>Ophalen</h4>
+                        <h4>Ophalen:</h4>
                         <a href="">controleer vergelijkbaarheid</a>
                     </section>
                     <section>
                         <img src="images/bezorg-doos.png" alt="">
-                        <h4>levering</h4>
+                        <h4>levering:</h4>
+                        <p>Di 27 Okt-Gratis</p>
                         <a href="">Meer bezorg opties</a>
                     </section>
                 </div>
-                
             </fieldset>
         </form>
+        <ul>
+            <li class="li-bezorg">
+                <img src="images/bezorg-doos.png" alt="">
+                <h4>Gratis snelle en contactloze bezorging</h4>
+            </li>
+            <li class="li-bezorg">
+                <img src="images/bezorg-doos.png" alt="">
+                <h4>Eenvoudig gratis retourneren</h4>
+            </li>
+        </ul>
 
 
 
@@ -450,6 +460,7 @@
             <a href="">Site-overzicht</a>
         </section>
     </footer>
+    <script src="scripts/script.js" charset="utf-8"></script>
 </body>
 
 </html>
