--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 Vanaf €334 bij inruilen.
             </h3>
             
-                <a id="links" href="" >Meer informatie > </a>
-                <a id="rechts" href="" >koop > </a>
+                <a id="links" href="detail.html" >Meer informatie > </a>
+                <a id="rechts" href="detail.html" >koop > </a>
             
 	        <img src="images/Iphone-se.jpg" alt="iphone se" style="background-image: ">
 	    </section>
