--- a/detail.html
+++ b/detail.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <a href=""><img src="images/hamburger-menu.png" alt="hamburger menu"></a>
-            <a href=""><img src="images/logo-bovenaan.png" alt="apple logo"></a>
+            <a href="index.html"><img src="images/logo-bovenaan.png" alt="apple logo"></a>
             <a href=""><img src="images/mandje.png" alt="winkelwagentje"></a>
         </nav>
         <section id="bovenbalk" >
