--- a/detail.html
+++ b/detail.html
@@ -24,7 +24,7 @@
                 Iphone SE
             </h2>
 
-            <p>
+            <p id="tekstvak2">
                €489
             </p>
 
