--- a/detail.html
+++ b/detail.html
@@ -195,18 +195,23 @@
             </fieldset>
         </form>
         <ul>
-            <li class="li-bezorg">
+            <li class="">
                 <img src="images/bezorg-doos.png" alt="">
                 <h4>Gratis snelle en contactloze bezorging</h4>
             </li>
-            <li class="li-bezorg">
+            <li class="">
                 <img src="images/bezorg-doos.png" alt="">
                 <h4>Eenvoudig gratis retourneren</h4>
             </li>
         </ul>
-
-
-
+        <section id="inhoud-vepakking">
+            <h1>Inhoud van de verpakking</h1>
+            <figure>
+                <img src="images/Iphone-se-inhoudverpakking.jpg" alt="Iphone se wit">
+                <img src="images/lightning-cable.jpg" alt="Iphone lightning cable">
+            </figure>
+        </section>
+        
     </main>
     <footer>
         <ul>
