--- a/detail.html
+++ b/detail.html
@@ -32,9 +32,9 @@
     </header>
     <main>
         <section id="iphone-se-deatil">
-            <h1 id="h1-detail">
+            <h2 id="h1-detail">
                 Koop Iphone SE
-            </h1>
+            </h2>
             <h2 id="h2-detail">
                 Krijg tot € 155 korting bij inruil**
             </h2>
@@ -178,7 +178,7 @@
               
                <h1 id="prijs">€ 489,00</h1>
                <p>Inclusief btw en wettelijke heffingen t.w.v. ca.<br> € 90,00.* </p>
-                <button type="submit" class="registerbtn">In winkelmandje</button>
+                <button type="submit" class="register-btn">In winkelmandje</button>
                 <div id="grid-container">
                     <section>
                         <img src="images/ophaal-tas.png" alt="">
